--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,6 @@
-# Backend API Requirements
-
-fastapi>=0.109.0
-uvicorn[standard]>=0.27.0
-websockets>=12.0
-openai>=1.10.0
-pydantic>=2.5.0
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-python-dotenv>=1.0.0
-aiosmtplib>=3.0.0
-jinja2>=3.1.3
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+websockets==12.0
+python-multipart==0.0.6
+openai==1.3.7
+pydantic==2.5.0
