--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,12 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-websockets==12.0
-python-multipart==0.0.6
-openai==1.3.7
-pydantic==2.5.0
+# Build tooling (helps avoid metadata-generation-failed in isolated builds)
+pip>=24.0
+setuptools>=70.0.0
+wheel>=0.42.0
+
+# App deps (Python 3.11 compatible)
+fastapi==0.115.7
+uvicorn[standard]==0.40.0
+websockets==15.0.1
+python-multipart==0.0.21
+pydantic==2.10.6
+openai==2.14.0
